fixed vertical stretching of product

--- a/easyshop.ui/css/main.css
+++ b/easyshop.ui/css/main.css
@@ -95,10 +95,11 @@ main > .content {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	width: 100%;
-    height: 87vh;
-    padding: 20px;
-    overflow: scroll;
-    gap: 20px;
+	height: 87vh;
+	padding: 20px;
+	overflow: scroll;
+	gap: 20px;
+	align-items: flex-start;
 }
 
 main > .content-form {
